perf(modeling): add native model commit pipeline
Keep serialized messages envelope-backed and lazily materialized across transport, tracking, model loading, commit and result paths. Add binary wire codecs, grouped commit/result preparation, adaptive-cache selection behind defaults, and model-specific commit policies with deterministic conflict resolution.

Preserve legacy wire decoding, legacy soft-reference cache defaults, public SerializedMessage behavior and independent decode ownership. Verify the full reactor including Java and Kotlin downstream projects.